--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,17 @@
             <artifactId>okhttp</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
 </project>
