--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
     <artifactId>iconic</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
         <dependency>
             <groupId>com.squareup.okhttp</groupId>
             <artifactId>okhttp</artifactId>
